--- a/Docker/Dockerfile.frontend
+++ b/Docker/Dockerfile.frontend
@@ -6,4 +6,4 @@ WORKDIR /app
 RUN python -m pip install -r requirements.txt
 ENV FLASK_RUN_SERVER_NAME=0.0.0.0
 EXPOSE 5000
-ENTRYPOINT [ "python", "run_app_py" ]
+ENTRYPOINT [ "python", "run_app.py" ]
